<resources>
    <string name="app_version">1.3</string>
    <string name="app_name">Port@firmas</string>
    <string name="app_title">Port@firmas v1.3</string>
    <string name="close">Cerrar</string>
    <string name="error">Error</string>
	<string name="server_select">Servidores Portafirmas</string>
    <string name="aviso">Aviso</string>
    <string name="see_details">Ver detalle</string>
    <string name="sign_vb">Firmar/V\u00BAB\u00BA</string>
    <string name="sign">Firmar</string>
	<string name="vb">Visto Bueno</string>
    <string name="reject">Rechazar</string>
    <string name="filter">Filtrar</string>
    <string name="nofilter">Eliminar filtro</string>
    <string name="update">Actualizar</string>
    <string name="loading">Cargando\u002E\u002E\u002E</string>
    <string name="title_activity_petition_results_list">Lista de peticiones</string>
    <string name="title_unresolved_petition_list">Solicitudes pendientes</string>
    <string name="title_signed_petition_list">Solicitudes firmadas</string>
    <string name="title_rejected_petition_list">Solicitudes rechazadas</string>
    <string name="title_activity_login">Acceso al Portafirmas</string>
    <string name="select_all">Seleccionar todas</string>
    <string name="unselect_all">Quitar selección</string>
    <string name="see_unresolves">Ver solicitudes pendientes</string>
    <string name="see_rejects">Ver solicitudes rechazadas</string>
    <string name="see_signeds">Ver solicitudes firmadas</string>
    <string name="question_sign_petition">\u00BFDesea firmar la solicitud seleccionada?</string>
    <string name="question_reject_petition">\u00BFDesea rechazar la solicitud seleccionada?</string>
    <string name="yes">S\u00ED</string>
    <string name="no">No</string>
    <string name="title_activity_request_details">Detalles del fichero</string>
    <string name="subject">Asunto</string>
    <string name="ref">Referencia</string>
    <string name="date">Fecha</string>
    <string name="application">Aplicaci\u00F3n</string>
    <string name="senders">Remitentes</string>
    <string name="docs">Documentos</string>
    <string name="details">Detalles</string>
    <string name="sign_lines">L\u00EDneas de firmas</string>
    <string name="doc_download">Descargas</string>
    <string name="doc_preview">Previsualizar</string>
    <string name="toast_downloading">Descargando el fichero</string>
    <string name="toast_error_previewing">No se ha podido previsualizar el documento</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="signfolder_logo">Logo del portafirmas</string>
    <string name="label_presentation_text">Portafirmas es el aplicativo m\u00F3vil de Ministerio de Hacienda y Administraciones P\u00FAblicas para acceder a sus servicios de portafirmas. Para poder acceder al servicio deber\u00E1n haberle dado de alta en el sistema y disponer del certificado digital necesario para su autenticaci\u00F3n importado en su dispositivo.</string>
    <string name="label_presentation_text_mini">Portafirmas es el aplicativo m\u00F3vil de MinHAP para acceder a sus servicios de portafirmas. Para acceder al servicio deber\u00E1n haberle dado de alta en el sistema y disponer del certificado digital necesario para su autenticaci\u00F3n importado en su dispositivo.</string>
    <string name="button_import_cert">Importar certificado</string>
    <string name="button_login">Acceder con certificado</string>
	<string name="signline_header">Linea de firma %1$d</string>
	<string name="sign_dialog_sign">Se va a firmar 1 petici\u00F3n.</string>
	<string name="sign_dialog_signs">Se van a firmar %d peticiones.</string>
	<string name="sign_dialog_approve">Se va a aprobar 1 petici\u00F3n.</string>
	<string name="sign_dialog_approves">Se van a aprobar %d peticiones.</string>
	<string name="sign_dialog_sign_approve">Se van a procesar %1$d %2$s de firma y %3$d de visto bueno.</string>
	<string name="request">petici\u00F3n</string>
	<string name="requests">peticiones</string>
	<string name="sign_dialog_question">¿Desea continuar con la operaci\u00F3n?</string>
   	<string name="loading_doc">Descargando documento\u002E\u002E\u002E</string>
    <string name="signs">Firmas</string>
    <string name="sign_reports">Informe de firmas</string>
    <string name="sign_filename">%1$s_firmado.%2$s</string>
    <string name="sign_report">report_%s.pdf</string>
    <string name="no_request_avaible">No hay peticiones en este listado</string>
    <string name="pagination_separator">%1$d/%2$d</string>
    <string name="img_cd_previous_page">Previous page</string>
    <string name="img_cd_next_page">Next page</string>
    <string name="img_cd_first_page">First page</string>
    <string name="img_cd_last_page">End page</string>
    <string name="title_configure_filter">Filtrado de peticiones</string>
    <string name="label_order">Ordenaci\u00F3n</string>
    <string name="label_order_rule">Criterio</string>
    <string name="label_filters">Filtros</string>
    <string name="label_filters_enable">Activar filtros</string>
    <string name="label_filters_by_subject">Asunto</string>
    <string name="label_filters_by_app">Aplicaci\u00F3n</string>
    <string name="label_filters_by_date_start">Fecha inicio</string>
    <string name="label_filters_by_date_end">Fecha fin</string>
    <string name="filter_order_attribute_date">Fecha</string>
    <string name="filter_order_attribute_subject">Asunto</string>
    <string name="filter_order_attribute_app">Aplicaci\u00F3n</string>
    <string name="error_msg_select_any_request">Seleccione al menos una solicitud de firma</string>
    <string name="error_msg_certificate_encoding">Error de codificaci\u00F3n del certificado</string>
    <string name="error_msg_communicating_server">Ha ocurrido un error de comunicaci\u00F3n con el servidor</string>
	<string name="error_msg_responding_server">Se obtuvo una respuesta incorrecta del servidor</string>
    <string name="error_msg_loading_requests">Error al cargar la lista de peticiones</string>
    <string name="error_msg_loading_request_details">Error al cargar los detalles de la petici\u00F3n</string>
    <string name="error_msg_check_connection">Por favor, compruebe su conexi\u00F3n. Para poder utilizar esta aplicaci\u00F3n es necesario que el dispositivo est\u00E9 conectado a la red.</string>
    <string name="error_msg_proxy_no_config">No se ha configurado correctamente la URL del servicio de Portafirmas.</string>
    <string name="error_msg_rejecting_requests">Ocurri\u00F3 un error al rechazar las peticiones de firma seleccionadas.</string>
    <string name="error_msg_rejecting_request">Ocurri\u00F3 un error al rechazar la petici\u00F3n de firma.</string>
    <string name="error_msg_procesing_requests">Ocurri\u00F3 un error al procesar las peticiones de firma seleccionadas.</string>
    <string name="error_msg_procesing_request">Ocurri\u00F3 un error al procesar la petici\u00F3n de firma.</string>
    <string name="error_loading_keystore">Error al cargar el almacen de claves</string>
    <string name="error_loading_certificate_alias">Error extrayendo los alias de los certificados del almacen</string>
    <string name="error_loading_certificate">No se ha podido cargar el certificado seleccionado para firmar</string>
    <string name="error_no_certs">No se han encontrado certificados instalados en su dispositivo</string>
    <string name="error_title_keystore_empty">Almac\u00E9n vac\u00EDo</string>
    <string name="toast_msg_rejects_ok">Las peticiones se han rechazado correctamente</string>
    <string name="toast_msg_reject_ok">La petici\u00F3n se ha rechazado correctamente</string>
	<string name="toast_msg_rejects_ko">Error rechazar %1$d de las %2$d peticiones seleccionadas</string>
	<string name="toast_msg_reject_ko">Error rechazar la petici\u00F3n seleccionada</string>
    <string name="toast_msg_signs_ok">Las peticiones se han firmado correctamente</string>
    <string name="toast_msg_sign_ok">La petici\u00F3n se ha firmado correctamente</string>
    <string name="toast_msg_signs_ko">Error al firmar %1$d de las %2$d peticiones seleccionadas</string>
    <string name="toast_msg_sign_ko">Error al firmar la petici\u00F3n seleccionada</string>
    <string name="toast_msg_download_ok">La firma se ha guardado correctamente en su directorio de Descargas</string>
    <string name="title_activity_cert_chooser">Importar certificado</string>
    <string name="file_chooser_directorio_actual">Directorio actual:</string>
    <string name="file_chooser_directorio">Directorio</string>
    <string name="file_chooser_directorio_padre">Directorio padre</string>
    <string name="file_chooser_tamano_del_fichero">Tama\u00F1o: %s</string>
    <string name="file_chooser_read_error">Error: No ha sido posible leer el fichero</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="allow">Permitir</string>
    <string name="dialog_msg_accessing_keystore">Accediendo al almac\u00E9n\u002E\u002E\u002E</string>
    <string name="dialog_msg_authenticating">Autenticando usuario\u002E\u002E\u002E</string>
    <string name="dialog_msg_configurating">Configurando la aplicaci\u00F3n\u002E\u002E\u002E</string>
    <string name="dialog_msg_loading">Cargando\u002E\u002E\u002E</string>
    <string name="dialog_msg_signing_1">Firmando petici\u00F3n\u002E\u002E\u002E</string>
    <string name="dialog_msg_approving_1">Aprobando petici\u00F3n\u002E\u002E\u002E</string>
    <string name="dialog_msg_rejecting_1">Rechazando petici\u00F3n\u002E\u002E\u002E</string>
    <string name="dialog_msg_loading_petitions">Cargando peticiones\u002E\u002E\u002E</string>
    <string name="dialog_msg_processing_requests">Procesando peticiones\u002E\u002E\u002E</string>
    <string name="dialog_msg_loading_configuration">Cargando su configuraci\u00F3n\u002E\u002E\u002E</string>
    <string name="dialog_msg_no_selected_requests">No se han seleccionado peticiones de firma.</string>
    <string name="dialog_title_confirm_reject">Rechazo de peticiones</string>
    <string name="dialog_msg_reject_request">Motivo de rechazo</string>
    <string name="dialog_title_close_session">Cierre de sesi\u00F3n</string>
    <string name="dialog_msg_close_session">Se va a cerrar su sesi\u00F3n. \u00BFDesea continuar?</string>
    <string name="dialog_msg_confirm_save_sign_title">\u00BFDesea descargar la firma?</string>
    <string name="dialog_msg_confirm_save_sign">La firma del documento se almacenar\u00E1 en su directorio de descargas.</string>
    <string name="dialog_msg_confirm_preview_title">\u00BFDesea visualizar el documento?</string>
    <string name="dialog_msg_confirm_preview">El documento puede ser un fichero de gran tama\u00F1o. Aseg\u00FArese de estar conectado a una red de alta velocidad y, a ser posible, sin coste adicional.</string>
    <string name="dialog_pin">Para poder utilizar el certificado introduzca su c\u00F3digo de seguridad.\n</string>
    <string name="dialog_title_select_cert">Seleccione un certificado</string>
    <string name="dialog_alias_cert_text">%1$s\nV\u00E1lido: %2$s\nHasta: %3$s\nEmisor: %4$s</string>
	<string name="dialog_msg_confirm_description_sign_approve">Se van a procesar:</string>
    <string name="dialog_msg_confirm_question_sign_approve">\u00BFDesea continuar con la operaci\u00F3n?</string>
    <string name="dialog_msg_sign_petition_1">petici\u00F3n de firma.</string>
    <string name="dialog_msg_sign_petition_2">peticiones de firma.</string>
    <string name="dialog_msg_approve_petition_1">petici\u00F3n de visto bueno.</string>
    <string name="dialog_msg_approve_petition_2">peticiones de visto bueno.</string>
   	<string name="dialog_msg_confirm_sign">Se va a proceder a firmar esta petici\u00F3n. \u00BFDesea continuar?</string>
   	<string name="dialog_msg_confirm_approve">Se va a proceder a aprobar esta petici\u00F3n. \u00BFDesea continuar? </string>
</resources>