<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/select_all" android:title="@string/select_all"></item>
	<item android:id="@+id/unselect_all" android:title="@string/unselect_all" android:visible="false"></item>
	<item android:id="@+id/see_rejects" android:title="@string/see_rejects"></item>
    <item android:id="@+id/see_signeds" android:title="@string/see_signeds"></item>
    <item android:id="@+id/filter" android:icon="@drawable/icon_filter" android:title="@string/filter" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/no_filter" android:icon="@drawable/icon_no_filter" android:title="@string/nofilter" android:showAsAction="ifRoom" android:visible="false"></item>
    <item android:id="@+id/update" android:title="@string/update"></item>
</menu>
