<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <!-- Botones Rechazar/Firmar -->
    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center|right"
        android:layout_marginRight="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnReject"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:onClick="onClickReject"
            android:text="@string/reject"
            style="@style/ButtonText" />

        <Button
            android:id="@+id/btnSign"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:onClick="onClickSign"
            android:text="@string/sign"
            
            style="@style/ButtonText" />

    </LinearLayout>
	
	
	<TabHost 
	    android:id="@android:id/tabhost"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    
	    >
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        
	         >
	
	        <TabWidget
	            android:id="@android:id/tabs"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	             android:background="@drawable/tab_selector"
	             >
	        </TabWidget>
	
	        <FrameLayout
	            android:id="@android:id/tabcontent"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            >
	 			<!-- Pestaña Detalles -->
		            <LinearLayout
		                android:id="@+id/tab1"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:baselineAligned="false"
		                android:orientation="vertical"
		                android:layout_marginTop="10dp"
		                android:layout_marginLeft="10dp"
		                android:layout_marginRight="10dp"	               
		               >
			
						    <!-- Asunto -->
			                <LinearLayout
			                    android:id="@+id/tableRow1"
			                    android:layout_width="fill_parent"
			                    android:layout_height="wrap_content"
			                    android:layout_marginBottom="5dp"
			                    android:orientation="horizontal" >
			
			                    <TextView
			                        android:id="@+id/subjectField"
			                        android:layout_width="100dp"
			                        android:layout_height="wrap_content"
			                        android:text="@string/subject"
			                        android:textIsSelectable="false"
							        android:textAppearance="?android:attr/textAppearanceSmall"
							        style="@style/SignLine_Item_Mini_Land"
							        android:background="#EFEFEF"
							        android:layout_marginLeft="10dp"
							        android:layout_marginRight="10dp"
			                        />

								<TextView
								    android:id="@+id/subjectValue"
								    android:layout_width="wrap_content"
								    android:layout_height="wrap_content"
								    android:layout_marginLeft="10dp"
								    android:layout_marginTop="5dp"
								    android:gravity="center_vertical"
								    android:textAppearance="?android:attr/textAppearanceMedium"
								    android:textIsSelectable="true" />

			                </LinearLayout>
			
			                <!--  Referencia -->		                
			                <LinearLayout
			                    android:id="@+id/tableRow2"
			                    android:layout_width="fill_parent"
			                    android:layout_height="wrap_content"
			                    android:layout_marginBottom="5dp"
			                    android:orientation="horizontal" >
			
			                    <TextView
			                        android:id="@+id/referenceField"
			                        android:layout_width="100dp"
			                        android:layout_height="wrap_content"
			                        android:text="@string/ref"
			                        android:textIsSelectable="false"
							        android:textAppearance="?android:attr/textAppearanceSmall"
							        style="@style/SignLine_Item_Mini_Land"
							       	android:background="#EFEFEF"
							        android:layout_marginLeft="10dp"
							        android:layout_marginRight="10dp" 
			                       />
			
			                    <TextView
			                        android:id="@+id/referenceValue"
			                        android:layout_width="wrap_content"
			                        android:layout_height="wrap_content"
			                        android:layout_marginLeft="10dp"
			                        android:layout_marginTop="5dp"
			                        android:gravity="center_vertical"
			                        android:textAppearance="?android:attr/textAppearanceMedium"
			                        android:textIsSelectable="true" />

			                </LinearLayout>
			
			                <!-- Fecha -->
			                <LinearLayout
			                    android:id="@+id/tableRow3"
			                    android:layout_width="fill_parent"
			                    android:layout_height="wrap_content"
			                    android:layout_marginBottom="5dp"
			                    android:orientation="horizontal" >
			
			                    <TextView
			                        android:id="@+id/dateField"
			                        android:layout_width="100dp"
			                        android:layout_height="wrap_content"
			                        android:text="@string/date"
			                      	android:textIsSelectable="false"
							        android:textAppearance="?android:attr/textAppearanceSmall"
							        style="@style/SignLine_Item_Mini_Land"
							        android:background="#EFEFEF"
							        android:layout_marginLeft="10dp" 
							        android:layout_marginRight="10dp" 
			                        />
			
			                    <TextView
			                        android:id="@+id/dateValue"
			                        android:layout_width="wrap_content"
			                        android:layout_height="wrap_content"
			                        android:textIsSelectable="true"
			                        android:textAppearance="?android:attr/textAppearanceMedium"
									android:layout_marginLeft="10dp"
									android:layout_marginTop="5dp"
			                        android:gravity="center_vertical" />
			                </LinearLayout>
					
							<!-- Aplicacion -->		                
			                <LinearLayout
			                    android:id="@+id/tableRow4"
			                    android:layout_width="fill_parent"
			                    android:layout_height="wrap_content"
			                    android:layout_marginBottom="5dp"
			                    android:orientation="horizontal" >
			
			                    <TextView
			                        android:id="@+id/applicationField"
			                        android:layout_width="100dp"
			                        android:layout_height="wrap_content"
			                        android:text="@string/application"
			                        android:textIsSelectable="false"
							        android:textAppearance="?android:attr/textAppearanceSmall"
							        style="@style/SignLine_Item_Mini_Land"
							        android:background="#EFEFEF" 
							        android:layout_marginLeft="10dp"
							        android:layout_marginRight="10dp" 
			                        />
			
			                    <TextView
			                        android:id="@+id/applicationValue"
			                        android:layout_width="200dp"
			                        android:layout_height="wrap_content"
			                        android:textIsSelectable="true"
			                        android:textAppearance="?android:attr/textAppearanceMedium"
									android:layout_marginTop="5dp"
									android:layout_marginLeft="10dp"
									android:gravity="center_vertical" />
			                </LinearLayout>
				
			                <!-- Remitente -->		                
			                <LinearLayout
			                    android:id="@+id/tableRow5"
			                    android:layout_width="fill_parent"
			                    android:layout_height="wrap_content"
			                    android:layout_marginBottom="5dp"
			                    android:orientation="horizontal" >
			
			                    <TextView
			                        android:id="@+id/sendersField"
			                        android:layout_width="100dp"
			                        android:layout_height="wrap_content"
			                        android:text="@string/senders"
			                        android:textIsSelectable="false"
							        android:textAppearance="?android:attr/textAppearanceSmall"
							        style="@style/SignLine_Item_Mini_Land"
							        android:background="#EFEFEF"
							        android:layout_marginLeft="10dp" 
							        android:layout_marginRight="10dp" 
			                        />
			
			                    <ListView
			                        android:id="@+id/listSenders"
			                        android:layout_width="match_parent"
			                        android:layout_height="wrap_content"
			                        android:layout_marginLeft="10dp"
			                        android:layout_marginTop="5dp" >
			                    </ListView>
			                </LinearLayout>
			          
		            </LinearLayout>
	
	            
	            <!-- Lineas de firmas -->
	            <LinearLayout
	                android:id="@+id/tab2"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:baselineAligned="false"
	                android:layout_marginTop="15dp"
	                android:layout_marginLeft="15dp"
	                android:layout_marginRight="15dp"
	                 >
	                
	                <ListView
	                    android:id="@+id/listSignLines"
	                    android:layout_width="0dp"
	                    android:layout_weight="1"
	                    android:layout_height="wrap_content" >
	                </ListView>
				</LinearLayout>
				
	            
				<!-- Documentos -->
				<LinearLayout
	                android:id="@+id/tab3"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:baselineAligned="false"
	               	android:layout_marginTop="15dp"
	                android:layout_marginLeft="15dp"
	                android:layout_marginRight="15dp">
	
	                <ListView
	                    android:id="@+id/listDocs"
	                    android:layout_width="0dp"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1" >
	                </ListView>
	            </LinearLayout>
	
	        </FrameLayout>
	    </LinearLayout>
	
	</TabHost>
</LinearLayout>